# Proyecto-de-Software

./: .gitignore  README.md
admin/: app.py  pyproject.toml  rutas-api.txt
admin/public/: carnet.css  home.css  index.css  login.css  style.css
admin/src/core/: __init__.py  config.py  database.py  seeds..py  seeds.py  usuarioModel.py
admin/src/core/models/: __init__.py  asociado_model.py  config_model.py  cuota_model.py  disciplina_model.py  pago_model.py  permiso_model.py  rol_model.py  usuario_model.py
admin/src/web/: __init__.py  config.py
admin/src/web/controllers/: __init__.py  api_disciplinas.py  asociado_controller.py  auth_controller.py  config_controller.py  cuota_controller.py  disciplina_controller.py  index_controller.py  usuariosController.py  usuarios_controller.py
admin/src/web/helpers/: handlers.py  permiso.py
admin/src/web/templates/: configuracion.html  error.html  footer.html  gestion_asociados.html  gestion_disciplinas.html  gestion_usuarios.html  home.html  index.html  inicio_privada.html  layout.html  pago_cuotas.html  pruebaUsuario.html  prueba_usuario.html
admin/src/web/templates/asociado/: carnet.html  crear_asociado.html  inscribir_asociado_disciplina.html
admin/src/web/templates/auth/: login.html
admin/src/web/templates/disciplina/: crear_disciplina.html
admin/src/web/templates/menu/: menu_register_user.html
admin/src/web/templates/pago_de_una_couta/: realizar_pago.html
admin/src/web/templates/pdfs/: pdf_asociado.html  pdf_carnet.html  pdf_recibo_cuota.html
admin/src/web/templates/user/: crear_usuario.html  (+3 more)
(+48 files in other folders)
