[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["MAXIMILIANO LEONELO FRANCESCONI <maxifni_fsa@live.com.ar>"]
readme = "README.md"
packages = [{include = "web", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
psycopg2-binary = "^2.9.3"
Flask-SQLAlchemy = "^2.5.1"
Flask-Session = "^0.4.0"
Jinja2 = "^3.1.2"
fastapi-csrf-protect = "^0.2.2"
psycopg2 = "^2.9.4"
pdfkit = "^1.0.0"
xlwt = "^1.3.0"
Flask-Cors = "^3.0.10"
pyjwt = "1.7.1"
Flask-QRcode = "^3.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
flask-shell-ipython = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
